src/core-crm/objects/Relationship_Manager__c/Relationship_Manager__c.object-meta.xml
<CustomObject>
    <description>Relationship Manager enables relationships to be stored and managed between a DEP User and a Contact and/or a DEP User and a Business Organisation. The relationship type is always stated from the perspective/direction of the User.</description>
    <label>Relationship Manager</label>
    <nameField>
        <displayFormat>RM-{000000}</displayFormat>
        <label>Relationship Manager Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationship Managers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>