src/core-crm/objects/Relationship_Manager__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the Organisation who has a relationship with the User.</description>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Business Organisation</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relationship Managers</relationshipLabel>
    <relationshipName>Relationship_Managers</relationshipName>
    <type>Lookup</type>
</CustomField>