src/core-crm/objects/Relationship_Manager__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Captures where the relationship is in effect or not.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>