src/core-crm/objects/Relationship_Manager__c/fields/Primary_QUT_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_QUT_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the DEP User who has a relationship with the Contact.</description>
    <label>Primary QUT Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <filterItems>
            <field>User.UserRoleId</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>notEqual</operation>
            <value>System Administration</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Relationship_Managers</relationshipName>
    <type>Lookup</type>
</CustomField>