src/core-crm/objects/Relationship_Manager__c/fields/Relationship_Manager_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Manager_Type__c</fullName>
    <description>Indicates the business context the Relationship Manager is responsible for or can assist other DEP users with.</description>
    <label>Relationship Manager Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Research Engagement</fullName>
            </value>
            <value>
                <fullName>Corporate Education</fullName>
            </value>
            <value>
                <fullName>Advancement</fullName>
            </value>
            <value>
                <fullName>Corporate Partnerships</fullName>
            </value>
            <value>
                <fullName>Commercialisation</fullName>
            </value>
            <value>
                <fullName>Events Management</fullName>
            </value>
            <value>
                <fullName>QUT Wide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>