src/core-crm/objects/Relationship_Manager__c/recordTypes/Account_Relationship_Manager.recordType-meta.xml
<RecordType>
    <fullName>Account_Relationship_Manager</fullName>
    <active>true</active>
    <description>Identifies the QUT relationship manager for a contact.</description>
    <label>Account Relationship Manager</label>
</RecordType>