src/core-crm/objects/Relationship_Manager__c/recordTypes/Contact_Relationship_Manager.recordType-meta.xml
<RecordType>
    <fullName>Contact_Relationship_Manager</fullName>
    <active>true</active>
    <description>Identifies the QUT relationship manager for an organisation.</description>
    <label>Contact Relationship Manager</label>
</RecordType>